changed the code to the demo

--- a/index.html
+++ b/index.html
@@ -10,57 +10,8 @@
 </head>
 <body>
     <h1>Random Domino Picker</h1>
-    <ul class="domino-list">
-        <li>🁣</li>
-        <li>🁤</li>
-        <li>🁥</li>
-        <li>🁦</li>
-        <li>🁧</li>
-        <li>🁨</li>
-        <li>🁩</li>
-        <li>🁪</li>
-        <li>🁫</li>
-        <li>🁬</li>
-        <li>🁭</li>
-        <li>🁮</li>
-        <li>🁯</li>
-        <li>🁰</li>
-        <li>🁱</li>
-        <li>🁲</li>
-        <li>🁳</li>
-        <li>🁴</li>
-        <li>🁵</li>
-        <li>🁶</li>
-        <li>🁷</li>
-        <li>🁸</li>
-        <li>🁹</li>
-        <li>🁺</li>
-        <li>🁻</li>
-        <li>🁼</li>
-        <li>🁽</li>
-        <li>🁾</li>
-        <li>🁿</li>
-        <li>🂀</li>
-        <li>🂁</li>
-        <li>🂂</li>
-        <li>🂃</li>
-        <li>🂄</li>
-        <li>🂅</li>
-        <li>🂆</li>
-        <li>🂇</li>
-        <li>🂈</li>
-        <li>🂉</li>
-        <li>🂊</li>
-        <li>🂋</li>
-        <li>🂌</li>
-        <li>🂍</li>
-        <li>🂎</li>
-        <li>🂏</li>
-        <li>🂐</li>
-        <li>🂑</li>
-        <li>🂒</li>
-        <li>🂓</li>
-</ul>
+    <main></main>
+    
 
 
 
@@ -71,7 +22,7 @@
 
 
 
-
+    <footer>2021 &copy; Casey ford young</footer>
 
     <script src="./main.js"></script>
 </body>
